# Magick2CPC

./: .gitignore  .travis.yml  AUTHORS  INSTALL  Makefile.am  README  README.md  configure  configure.ac  default.nix  shell.nix
docs/: Doxyfile.in
src/: Makefile.am  codegen.c  codegen.h  cpc.c  cpc.h  cpcrslib.c  cpcrslib.h  cpcutils.c  cpcutils.h  magick2cpc.c  main.c  raster.c  raster.h  z88.c  z88.h
tests/: Makefile  append.c  nixos.c  triskel.c  uncrustify-c-cpp.cfg  z88dk-cpc_PutSp.c  z88dk-putsprite.c
